--- a/src/pages/character-advantages/character-advantages.html
+++ b/src/pages/character-advantages/character-advantages.html
@@ -36,7 +36,7 @@
       </ion-item-sliding>
       <!-- End list -->
     </ion-list>
-    <button id="characterAdvantages-button" ion-button color="stable" block on-click="goToCharacterDisadvantages()">
+    <button id="characterAdvantages-button" ion-button color="stable" block on-click="goToCharacterStatus()">
       Proceed
     </button>
   </form>
