--- a/src/pages/character-disadvantages/character-disadvantages.html
+++ b/src/pages/character-disadvantages/character-disadvantages.html
@@ -35,7 +35,7 @@
             </ion-item-options>
           </ion-item-sliding>
       </ion-list>
-    <button id="characterDisadvantages-button" ion-button color="stable" block on-click="goToCharacterResume()">
+    <button id="characterDisadvantages-button" ion-button color="stable" block on-click="goToCharacterAdvantages()">
       Proceed
     </button>
   </form>
