--- a/src/pages/character-features/character-features.html
+++ b/src/pages/character-features/character-features.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="character-features">
-  <form id="characterFeatures-form" (ngSubmit)="goToCharacterStatus()">
+  <form id="characterFeatures-form" (ngSubmit)="goToCharacterDisadvantages()">
     <ion-list id="characterFeatures-list">
       <ion-item id="characterFeatures-name">
         <ion-label>
