--- a/src/pages/character-languages/character-languages.html
+++ b/src/pages/character-languages/character-languages.html
@@ -36,7 +36,7 @@
       </ion-item-sliding>
       <!-- End list -->
     </ion-list>
-    <button id="characterLanguages-button" ion-button color="stable" block on-click="goToCharacterSkills()">
+    <button id="characterLanguages-button" ion-button color="stable" block on-click="goToCharacterResume()">
       Proceed
     </button>
   </form>
