--- a/src/pages/character-skills/character-skills.html
+++ b/src/pages/character-skills/character-skills.html
@@ -39,7 +39,7 @@
       </ion-item-sliding>
     </ion-list>
     <!-- End list -->
-    <button id="characterSkills-button" ion-button color="stable" block on-click="goToCharacterAdvantages()">
+    <button id="characterSkills-button" ion-button color="stable" block on-click="goToCharacterLanguages()">
       Proceed
     </button>
   </form>
