--- a/src/pages/character-status/character-status.html
+++ b/src/pages/character-status/character-status.html
@@ -103,7 +103,7 @@
       </ion-range>
     </ion-item>
   </form>
-  <button id="characterStatus-button" ion-button color="stable" block on-click="goToCharacterLanguages()">
+  <button id="characterStatus-button" ion-button color="stable" block on-click="goToCharacterSkills()">
     Proceed
   </button>
 </ion-content>
