Added new modals

--- a/src/pages/character-advantages/character-advantages.html
+++ b/src/pages/character-advantages/character-advantages.html
@@ -56,7 +56,7 @@
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
-    <button id="characterAdvantages-button" ion-button color="stable" block on-click="goToCharacterAdvantages()">
+    <button id="characterAdvantages-button" ion-button color="stable" block on-click="goToNextPage()">
       Proceed
     </button>
   </form>
